test/2/circular-let.err
type error: test/2/circular-let.ploy:1:14-14: expected a value; `x` refers to a forward declaration.
  main = { x = x }
               ~
